--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ project(":core") {
         outputs.dir outputDir
         doLast {
             delete(outputDir)
-            TexturePacker.process(inputDir, outputDir, "altas.pack")
+            TexturePacker.process(inputDir, outputDir, "atlas.pack")
         }
     }
 
